--- a/www/apps/docs/content/homepage.mdx
+++ b/www/apps/docs/content/homepage.mdx
@@ -1,6 +1,6 @@
 ---
 id: homepage
-title: b Documentation
+title: b documentation
 description: "b is a binary manager for developers - install, manage, and version your command-line tools effortlessly."
 slug: /
 hide_table_of_contents: true
@@ -63,11 +63,11 @@ Managing command-line tools across different projects and environments is challe
 b init
 
 # Install tools for your project
-b install jq@1.6 kubectl@1.28.0
+b install jq@jq-1.7 kubectl@v1.28.0
 
 # Tools are now available
-jq --version  # 1.6
-kubectl version --client  # 1.28.0
+jq --version              # jq-1.7
+kubectl version --client  # v1.28.0
 ```
 
 ## Explore b
