--- a/www/apps/docs/content/b/subcommands/update.mdx
+++ b/www/apps/docs/content/b/subcommands/update.mdx
@@ -1,84 +1,58 @@
 ---
-description: "Update installed binaries to their latest versions"
+description: "Update binaries to their latest versions"
 ---
 
 # b update
 
-The `b update` command checks for and installs newer versions of previously installed binaries, ensuring your tools stay up-to-date.
+Update binaries. If no arguments are given, `b` updates all binaries from the `b.yaml` configuration file.
 
-## Synopsis
+## Alias
+
+- `u`
+
+## Usage
 
 ```bash
-b update [options] [binary...]
+b update [binary...] [flags]
 ```
-
-## Description
-
-The `update` command checks GitHub releases for newer versions of your installed binaries and updates them if available. It respects version constraints in your `b.yaml` configuration while updating to the latest compatible version.
-
-## Options
-
-- `--all, -a`: Update all installed binaries
-- `--force, -f`: Force update even if already at latest version
-- `--quiet, -q`: Run in quiet mode with minimal output
-- `--check, -c`: Check for updates without installing
-- `--help, -h`: Show help information
 
 ## Examples
 
-### Check for Updates
+### Update all binaries
+
+If a `b.yaml` file is present, this command will update all the binaries listed in it to their latest available versions.
 
 ```bash
-# Check for updates without installing
-b update --check
-
-# Check specific binaries
-b update --check jq kubectl
+b update
 ```
 
-### Update Binaries
+### Update a specific binary
+
+Update a single binary to its latest version.
 
 ```bash
-# Update all installed binaries
-b update --all
-
-# Update specific binaries
-b update jq kubectl
-
-# Force update even if at latest version
-b update --force jq
+b update jq
 ```
 
-### Update Configuration
+### Force an update
+
+Force an update even if the binary is already at the latest version. This is useful for re-installing a corrupted binary.
 
 ```bash
-# Update binaries and save versions to b.yaml
-b update --all --save
+b update --force kubectl
 ```
 
-## Version Constraints
+## Flags
 
-When updating, the command respects version constraints in your `b.yaml`:
+| Flag         | Description               |
+|--------------|---------------------------|
+| `-h`, `--help` | help for update           |
 
-- `^1.2.3`: Updates to the latest 1.x.x version
-- `~1.2.3`: Updates to the latest 1.2.x version
-- `>1.2.3`: Updates to any version above 1.2.3
-- `1.2.3`: Keeps exactly this version (use --force to override)
+## Global Flags
 
-## Update Process
-
-1. **Version Check**: Compares installed versions with latest available
-2. **Dependency Resolution**: Ensures compatibility between dependencies
-3. **Download**: Fetches updated binaries from GitHub releases
-4. **Verification**: Validates the downloaded binaries
-5. **Backup**: Creates backups of existing binaries before updating
-6. **Update**: Replaces old binaries with new versions
-
-## Error Handling
-
-Common issues and solutions:
-
-- **Update failed**: Check network connection and GitHub access
-- **Version conflict**: Review version constraints in b.yaml
-- **Permission denied**: Ensure write permissions to installation directory
-- **Binary in use**: Close applications using the binary before updating
+| Flag                 | Description                                                              |
+|----------------------|--------------------------------------------------------------------------|
+| `-c`, `--config string`  | Path to configuration file (current: `/home/fentas/github/fentas/b/.bin/b.yaml`) |
+| `--force`            | Force operations, overwriting existing binaries                          |
+| `-q`, `--quiet`      | Quiet mode                                                               |
+| `-v`, `--version`    | Print version information and quit                                       |
