feat: environment file sync, multi-provider install, and CI (#94)
This pull request introduces significant improvements to the
documentation, developer workflow, and usability of the `b` project,
focusing on enhanced environment file management, streamlined CI
configuration, and improved user guidance. The most important changes
are summarized below.

**Documentation and User Guidance Improvements:**

* Expanded `README.md` to clarify that `b` manages both binaries and
environment files, with new sections describing features, usage, and
configuration for both (`binaries` and `envs`). Added badges for
coverage and Go reference.
[[1]](diffhunk://#diff-b335630551682c19a781afebcf4d07bf978fb1f8ac04c6bf87428ed5106870f5R12-R30)
[[2]](diffhunk://#diff-b335630551682c19a781afebcf4d07bf978fb1f8ac04c6bf87428ed5106870f5L30-R79)
[[3]](diffhunk://#diff-b335630551682c19a781afebcf4d07bf978fb1f8ac04c6bf87428ed5106870f5L78-R135)
[[4]](diffhunk://#diff-b335630551682c19a781afebcf4d07bf978fb1f8ac04c6bf87428ed5106870f5L231-R266)
* Updated the Docusaurus documentation to reflect new capabilities:
environment file syncing, cache management, and verification commands.
Added new quick reference commands and improved descriptions for
`install`, `list`, and `search` subcommands.
[[1]](diffhunk://#diff-d1608c210c7cf294ce1c546a320827fedfda045c1d54e9c4fb0612f1833f63e2L11-R15)
[[2]](diffhunk://#diff-d1608c210c7cf294ce1c546a320827fedfda045c1d54e9c4fb0612f1833f63e2L25-R33)
[[3]](diffhunk://#diff-d1608c210c7cf294ce1c546a320827fedfda045c1d54e9c4fb0612f1833f63e2R91-R108)
[[4]](diffhunk://#diff-d9923232b2df2837fc6dd0bc4160d9f80ebd99748948d56a73c962985f40e49dL2-R23)
[[5]](diffhunk://#diff-d9923232b2df2837fc6dd0bc4160d9f80ebd99748948d56a73c962985f40e49dR45-R56)
[[6]](diffhunk://#diff-d9923232b2df2837fc6dd0bc4160d9f80ebd99748948d56a73c962985f40e49dR97-R123)
[[7]](diffhunk://#diff-a3b2e7cfc905324dab3469dcebd157e6c0d9318aafc5a4f223c18500b4a9eb73L2-R7)
[[8]](diffhunk://#diff-a3b2e7cfc905324dab3469dcebd157e6c0d

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -93,7 +93,6 @@ Use **b** in your CI/CD pipelines:
 steps:
   - uses: actions/checkout@v4
   - name: Install b
-    # todo: wrong url; create install script
     run: curl -sSL https://github.com/fentas/b/releases/latest/download/install.sh | bash
   - name: Install project tools
     run: b install
@@ -119,9 +118,34 @@ b update kubectl
 b search terraform
 ```
 
+### 4. Sync Environment Files
+
+Sync configuration files from upstream git repositories:
+
+```bash
+# Sync files using SCP-style syntax
+b install github.com/org/infra:/manifests/base/** ./base
+
+# Add to b.yaml and sync
+b install --add github.com/org/infra@v2.0:/manifests/hetzner/** /hetzner
+```
+
+### 5. Verify and Update
+
+```bash
+# Verify all artifacts match b.lock checksums
+b verify
+
+# Update all binaries and envs
+b update
+
+# Update with three-way merge for local changes
+b update --strategy=merge
+```
+
 ## Configuration
 
-The `.bin/b.yaml` file defines your project's tool requirements:
+The `.bin/b.yaml` file defines your project's tool and env requirements:
 
 ```yaml
 binaries:
@@ -134,11 +158,27 @@ binaries:
   # alias: install one binary under a different name
   envsubst:
     alias: renvsubst
+  # install any GitHub release by ref
+  github.com/sharkdp/bat:
+    version: "v0.24.0"
   # custom file paths
   custom-kubectl:
     file: ../bin/kubectl  # relative to config file
-  system-tool:
-    file: /usr/local/bin/tool  # absolute path
+
+envs:
+  # Sync files from upstream git repos
+  github.com/org/infra:
+    version: v2.0
+    strategy: merge    # replace (default) | client | merge
+    ignore:
+      - "*.md"
+    files:
+      manifests/base/**:
+        dest: base/
+      manifests/hetzner/**:
+        dest: hetzner/
+  # Minimal entry - sync all files
+  github.com/org/shared-config:
 ```
 
 ### Binary Aliases
